--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     -->
     
     <title>React App</title>
+    <script src="https://js.stripe.com/v3/"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
